--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -54,7 +54,7 @@
               </button>
 
               <div *ngIf="content?.status==='Draft'">
-                <button type="button" class="btn ml-4" id="pub" (click)="reviewConfirmModal(content.identifier); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
+                <button type="button" class="btn ml-4" id="pub" (click)="reviewConfirmModal(content.identifier, content.status); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
               </div>
               <div *ngIf="(content?.status==='Review') && route.url !== '/upForReview'">
                 <button type="button" class="btn ml-4" id="pub" disabled><i class="fas fa-upload"></i>&nbsp; SUBMITTED FOR REVIEW</button>
