header responsiveness fixed

--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -13,12 +13,12 @@
             <div class="" *ngIf="slug !=='space'">
                     <app-main-menu class="d-flex computer only ml-auto"  [slugInfo]= "slug"></app-main-menu>
             </div>
-            <i class="large bars icon link primary-color mobile only" (click)="showSideBar()" tabindex="0"></i>
+            <i class="large bars icon link primary-color mobile only" *ngIf="slug ==='space' && userService.loggedIn" (click)="showSideBar()" tabindex="0"></i>
 
-            <div class="col-6" *ngIf="slug ==='space' && userService.loggedIn">
-                    <app-space-main-menu class="d-flex computer only ml-auto justify-content-center"  [slugInfo]= "slug"></app-space-main-menu>
+            <div class="col-6 computer only" *ngIf="slug ==='space' && userService.loggedIn">
+                    <app-space-main-menu class="d-flex  ml-auto justify-content-center"  [slugInfo]= "slug"></app-space-main-menu>
             </div>        
-    <div class="col-lg" *ngIf="userService.loggedIn">
+    <div class="" *ngIf="userService.loggedIn">
             <a class="profile-avtar item  pr-0" >
                     <a class="items mr-20">
                             <!-- <img src="{{'assets/images/notification.png'}}" class="notification-icon"> -->
@@ -108,6 +108,8 @@
                 
                 <div class="mobile only">
                         <div class="ui sidebar right vertical menu">
+                                <i class="close link icon side-bar-close-icon" (click)="showSideBar()" style="margin-right:-1rem;"></i>
+                                <div class="ui divider mt-20"></div>
                                 <a (click)="gotoContact('about')" class="item" id="a" >About</a>
                                 <a (click)="gotoContact('assets')" class="item" id="a" >Assets</a>
                                 <a  class="item" id="a" (click)="gotoContact('collaborators')">Collaborators</a>
@@ -116,7 +118,7 @@
                                 <!-- <a (click)="navigateToHome()" class="item ml-auto mr-10" >
                                   Home
                                 </a> -->
-                                <a href="/resources" class="sunblogin item font-weight-bold btn btn-purple  " id="ab">
+                                <a href="/resources" class="sunblogin item font-weight-bold btn btn-purple ml-10 " id="ab">
                                     {{resourceService.frmelmnts?.btn?.signin}}
                                 </a>
         </div>
