explore page route for sunbird is changed to explore-assets

--- a/src/app/tenant/sunbirdorg/privacy-policy.html
+++ b/src/app/tenant/sunbirdorg/privacy-policy.html
@@ -67,7 +67,7 @@
 				<div class="collapse navbar-collapse" id="mainNav" >
 					<ul class="nav navbar-nav">
 						<li class=""><a href="about.html">About Sunbird</a></li>
-						<li class=""><a href="/explore/1">Resources</a></li>
+						<li class=""><a href="/explore-assets/1">Resources</a></li>
 						<li class=""><a href="partners.html">Collaborators</a></li>
 					</ul>
 				</div>
