Tenant base title changes

--- a/src/app/tenant/space/about.html
+++ b/src/app/tenant/space/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	
-	<title>About Sunbird</title>
+	<title>About Societal</title>
 	<meta name="description" content="Sunbird is an open source, configurable, extendable, modular learning management platform architected for scale and designed to support multiple teaching and learning solutions supporting multiple languages and available for online and offline use."/>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
