--- a/src/app/tenant/sbwb/index.html
+++ b/src/app/tenant/sbwb/index.html
@@ -15,7 +15,7 @@
     <!-- <link rel="manifest" href="images/favicons/manifest.json"> -->
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sunbird</title>
+    <title>World Bank</title>
 
     <!-- Og Tags -->
     <meta property="og:title" content="Sunbird" />
