--- a/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
@@ -34,7 +34,7 @@
         <i class="ui remove icon "></i>
     </h5>
     <h5 appTelemetryInteract [telemetryInteractEdata]="closeIntractEdata" *ngIf="slug === 'sunbirdorg'"
-    class="ui ml-auto basic icon circular button " [routerLink]="['/explore/1']">
+    class="ui ml-auto basic icon circular button " [routerLink]="['/sunbirdorg/explore-assets']">
     <i class="ui remove icon "></i>
 </h5>
       </div>
@@ -55,7 +55,7 @@
         <i class="ui remove icon "></i>
       </h5>
         <h5 appTelemetryInteract [telemetryInteractEdata]="closeIntractEdata" *ngIf="slug === 'sunbirdorg'"
-        class="ui ml-auto basic icon circular button " [routerLink]="['/explore/1']">
+        class="ui ml-auto basic icon circular button " [routerLink]="['/sunbirdorg/explore-assets']">
         <i class="ui remove icon "></i>
   
     </h5>
