sunbirdorg footer and direct click of link from asset card is fixed

--- a/src/app/client/src/app/modules/core/components/sunbird-footer/sunbird-footer.component.html
+++ b/src/app/client/src/app/modules/core/components/sunbird-footer/sunbird-footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footers">
-    <div class="ui container ">
+    <div class="ui container mt-14 mb-15">
         <div class="ui grid">
 
         <div class="two wide computer only column">
