--- a/src/app/client/src/app/modules/core/components/sunbird-footer/sunbird-footer.component.scss
+++ b/src/app/client/src/app/modules/core/components/sunbird-footer/sunbird-footer.component.scss
@@ -7,6 +7,7 @@ height: fit-content;
 margin-top: 9rem;
 padding-left: 8rem;
   padding-right: 8rem;
+  width: -webkit-fill-available;
 
   .ui.container {
       width: 100%;
