--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -14,7 +14,7 @@
     <div in-view-item *ngFor="let content of allContent;let i = index;" [id]="i" [data]="content"
       class="col-md-4 py-3 pl-10">
       <div *ngIf="content">
-        <div class="card mb-5"  (click)="navigateToDetailsPage(content?.identifier, content?.status)">
+        <div class="card mb-5"  (click)="navigateToDetailsPage(content?.identifier, content?.status, $event, content?.link)">
 
           <div class="card-header">
             <div class="row">
@@ -44,7 +44,7 @@
              <p class="creator mb-0">Created By : {{content?.creators}}</p>
              <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
              <p class="creator mb-0"> Created Year: {{content?.year}}</p>
-             <p class="creator mb-0" *ngIf="content?.link">Link : {{content?.link}}</p>
+             <p class="creator mb-0" id="link" *ngIf="content?.link">Link : {{content?.link}}</p>
             <div class="card-text1">{{content?.description | titlecase | slice:0:60}}<span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
             <div class="d-flex justify-content-center mt-30">
